--- a/TitleBarLess/app/src/main/res/values/strings.xml
+++ b/TitleBarLess/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">TitleBarLess</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="button">Click Here</string>
+    <string name="title_activity_list_view_demo">ListViewDemo</string>
 
 </resources>
